--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "stylelint-csstree-validator": "^1.9.0",
     "web-vitals": "^1.0.1"
@@ -32,7 +34,18 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "import/no-extraneous-dependencies": [
+      "error",
+      {
+        "packageDir": "./"
+      }
+    ],
+    "settings": {
+      "import/resolver": {
+        "node": {}
+      }
+    }
   },
   "browserslist": {
     "production": [
